--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
-# Inicio requirements.txt
-
-# requirements.txt
-
-# Archivo de dependencias de Python para el proyecto backend
-
 annotated-doc==0.0.3
 annotated-types==0.7.0
 anyio==4.11.0
+APScheduler==3.11.1
 bcrypt==4.0.1
 certifi==2025.10.5
 cffi==2.0.0
@@ -53,9 +48,9 @@ supabase-auth==2.24.0
 supabase-functions==2.24.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.2
+tzlocal==5.3.1
 urllib3==2.5.0
 uvicorn==0.38.0
 websockets==15.0.1
 yarl==1.22.0
-
-# Fin requirements.txt
